// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Bibliographic Citation of subtype: book should match the snapshot 1`] = `
{
  "data": {
    "complexDataType": "NESTED_TYPE",
    "description": "citation information for the referenced book",
    "isArray": false,
    "isOptional": false,
    "label": "reference data",
    "schema": {
      "abstract": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "a brief summary of the referenced book",
        "isArray": false,
        "isOptional": true,
        "label": "abstract",
      },
      "creators": {
        "complexDataType": "NESTED_TYPE",
        "description": "those responsible for creating this work",
        "isArray": true,
        "isOptional": false,
        "label": "creators",
        "schema": {
          "name": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "full name of work's creator (free-form text)",
            "isArray": false,
            "isOptional": false,
            "label": "name",
          },
          "type": {
            "complexDataType": "ENUM",
            "description": "the person's role in creating the given work",
            "enumLabel": "Creator Type",
            "enumName": "BIBLIOGRAPHIC_SUBJECT_CREATOR_TYPE",
            "isArray": false,
            "isOptional": false,
            "label": "creator type",
            "labelsAndValues": [
              {
                "label": "artist",
                "value": "artist",
              },
              {
                "label": "author",
                "value": "author",
              },
              {
                "label": "director",
                "value": "director",
              },
            ],
          },
        },
      },
      "isbn": {
        "coscradDataType": "ISBN",
        "description": "a standardized globally unique identifier for the referenced book",
        "isArray": false,
        "isOptional": true,
        "label": "ISBN",
      },
      "numberOfPages": {
        "coscradDataType": "POSITIVE_INTEGER",
        "description": "the total number of pages in the referenced book",
        "isArray": false,
        "isOptional": true,
        "label": "number of pages",
      },
      "place": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the place where the referenced book was published",
        "isArray": false,
        "isOptional": true,
        "label": "place",
      },
      "publisher": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the publisher of the referenced book",
        "isArray": false,
        "isOptional": true,
        "label": "publisher",
      },
      "title": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the title of the referenced book",
        "isArray": false,
        "isOptional": false,
        "label": "title",
      },
      "url": {
        "coscradDataType": "URL",
        "description": "an link to an external digital representation of the book",
        "isArray": false,
        "isOptional": true,
        "label": "external link",
      },
      "year": {
        "coscradDataType": "YEAR",
        "description": "A number representing the year of publication",
        "isArray": false,
        "isOptional": true,
        "label": "year",
      },
    },
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Bibliographic Citation of subtype: courtCase should match the snapshot 1`] = `
{
  "data": {
    "complexDataType": "NESTED_TYPE",
    "description": "citation information for the referenced court case",
    "isArray": false,
    "isOptional": false,
    "label": "reference data",
    "schema": {
      "abstract": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "a brief summary of the court case",
        "isArray": false,
        "isOptional": true,
        "label": "abstract",
      },
      "caseName": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the official name of the court case",
        "isArray": false,
        "isOptional": false,
        "label": "case name",
      },
      "court": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the name of the court in which the case was decided",
        "isArray": false,
        "isOptional": true,
        "label": "court",
      },
      "dateDecided": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the date on which the court case was decided",
        "isArray": false,
        "isOptional": true,
        "label": "date decided",
      },
      "pages": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "summary information about the pages relevant to this court case",
        "isArray": false,
        "isOptional": true,
        "label": "pages",
      },
      "url": {
        "coscradDataType": "URL",
        "description": "external link to digital materials regarding this court case",
        "isArray": false,
        "isOptional": true,
        "label": "external link",
      },
    },
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Bibliographic Citation of subtype: journalArticle should match the snapshot 1`] = `
{
  "data": {
    "complexDataType": "NESTED_TYPE",
    "description": "citation information for the referenced journal article",
    "isArray": false,
    "isOptional": false,
    "label": "reference data",
    "schema": {
      "abstract": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "a brief summary of the journal article",
        "isArray": false,
        "isOptional": true,
        "label": "abstract",
      },
      "creators": {
        "complexDataType": "NESTED_TYPE",
        "description": "the authors of the referenced journal article",
        "isArray": true,
        "isOptional": false,
        "label": "creators",
        "schema": {
          "name": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "full name of work's creator (free-form text)",
            "isArray": false,
            "isOptional": false,
            "label": "name",
          },
          "type": {
            "complexDataType": "ENUM",
            "description": "the person's role in creating the given work",
            "enumLabel": "Creator Type",
            "enumName": "BIBLIOGRAPHIC_SUBJECT_CREATOR_TYPE",
            "isArray": false,
            "isOptional": false,
            "label": "creator type",
            "labelsAndValues": [
              {
                "label": "artist",
                "value": "artist",
              },
              {
                "label": "author",
                "value": "author",
              },
              {
                "label": "director",
                "value": "director",
              },
            ],
          },
        },
      },
      "doi": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "an alternative unique identifier in the form of a permalink",
        "isArray": false,
        "isOptional": true,
        "label": "DOI",
      },
      "issn": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "a standardized unique identifier for the journal article",
        "isArray": false,
        "isOptional": true,
        "label": "ISSN",
      },
      "issueDate": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "unstructured text representation of the date the journal article was issued",
        "isArray": false,
        "isOptional": false,
        "label": "issue date",
      },
      "publicationTitle": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the name of the journal in which the article was published",
        "isArray": false,
        "isOptional": true,
        "label": "publication title",
      },
      "title": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the title of the referenced journal article",
        "isArray": false,
        "isOptional": false,
        "label": "title",
      },
      "url": {
        "coscradDataType": "URL",
        "description": "an external link to a digital representation of the referenced journal article",
        "isArray": false,
        "isOptional": true,
        "label": "external link",
      },
    },
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Category  should match the snapshot 1`] = `
{
  "childrenIDs": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "the ID of every category that is a child (sub-cateogry) of this one",
    "isArray": true,
    "isOptional": false,
    "label": "children IDs",
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "label": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "the user-facing label for this category",
    "isArray": false,
    "isOptional": false,
    "label": "label",
  },
  "members": {
    "coscradDataType": "COMPOSITE_IDENTIFIER",
    "description": "the composite identifier of every resource or note in this category",
    "isArray": true,
    "isOptional": false,
    "label": "members",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Contributor  should match the snapshot 1`] = `
{
  "dateOfBirth": {
    "complexDataType": "NESTED_TYPE",
    "description": "Contributor's Date of Birth",
    "isArray": false,
    "isOptional": true,
    "label": "date of birth",
    "schema": {
      "day": {
        "coscradDataType": "POSITIVE_INTEGER",
        "description": "Day of Month",
        "isArray": false,
        "isOptional": false,
        "label": "day of month",
      },
      "month": {
        "complexDataType": "ENUM",
        "description": "a month of the year",
        "enumLabel": "Month",
        "enumName": "Month",
        "isArray": false,
        "isOptional": false,
        "label": "month",
        "labelsAndValues": [
          {
            "label": "January",
            "value": "01",
          },
          {
            "label": "February",
            "value": "02",
          },
          {
            "label": "March",
            "value": "03",
          },
          {
            "label": "April",
            "value": "04",
          },
          {
            "label": "May",
            "value": "05",
          },
          {
            "label": "June",
            "value": "06",
          },
          {
            "label": "July",
            "value": "07",
          },
          {
            "label": "August",
            "value": "08",
          },
          {
            "label": "September",
            "value": "09",
          },
          {
            "label": "October",
            "value": "10",
          },
          {
            "label": "November",
            "value": "11",
          },
          {
            "label": "December",
            "value": "12",
          },
        ],
      },
      "year": {
        "coscradDataType": "YEAR",
        "description": "The Year",
        "isArray": false,
        "isOptional": false,
        "label": "the year",
      },
    },
  },
  "fullName": {
    "complexDataType": "NESTED_TYPE",
    "description": "The Contributor's Full Name",
    "isArray": false,
    "isOptional": false,
    "label": "full name",
    "schema": {
      "firstName": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the user's first name",
        "isArray": false,
        "isOptional": false,
        "label": "first name",
      },
      "lastName": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the user's last name",
        "isArray": false,
        "isOptional": false,
        "label": "last name",
      },
    },
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "shortBio": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "A Short Biography",
    "isArray": false,
    "isOptional": true,
    "label": "biography",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Digital Text  should match the snapshot 1`] = `
{
  "audioForTitle": {
    "complexDataType": "NESTED_TYPE",
    "description": "contains refereneces to audio for the title",
    "isArray": false,
    "isOptional": false,
    "label": "audio for title",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "a list of audio for each available",
        "isArray": true,
        "isOptional": false,
        "label": "audio items",
        "schema": {
          "audioItemId": {
            "coscradDataType": "UUID",
            "description": "a reference to the relevant audio item",
            "isArray": false,
            "isOptional": false,
            "label": "audio item ID",
            "referenceTo": "audioItem",
          },
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "language of the audio",
            "enumLabel": "language code",
            "enumName": "LanguageCode",
            "isArray": false,
            "isOptional": false,
            "label": "language",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
        },
      },
    },
  },
  "coverPhotographId": {
    "coscradDataType": "UUID",
    "description": "a reference to a cover photograph for this digital text",
    "isArray": false,
    "isOptional": true,
    "label": "cover photograph ID",
    "referenceTo": "photograph",
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "pages": {
    "complexDataType": "NESTED_TYPE",
    "description": "a digital representation of the digital text's pages",
    "isArray": true,
    "isOptional": true,
    "label": "digital text pages",
    "schema": {
      "audio": {
        "complexDataType": "NESTED_TYPE",
        "description": "maintains references to audio in available languages",
        "isArray": false,
        "isOptional": false,
        "label": "multilingual audio",
        "schema": {
          "items": {
            "complexDataType": "NESTED_TYPE",
            "description": "a list of audio for each available",
            "isArray": true,
            "isOptional": false,
            "label": "audio items",
            "schema": {
              "audioItemId": {
                "coscradDataType": "UUID",
                "description": "a reference to the relevant audio item",
                "isArray": false,
                "isOptional": false,
                "label": "audio item ID",
                "referenceTo": "audioItem",
              },
              "languageCode": {
                "complexDataType": "ENUM",
                "description": "language of the audio",
                "enumLabel": "language code",
                "enumName": "LanguageCode",
                "isArray": false,
                "isOptional": false,
                "label": "language",
                "labelsAndValues": [
                  {
                    "label": "Chilcotin",
                    "value": "clc",
                  },
                  {
                    "label": "Haida",
                    "value": "hai",
                  },
                  {
                    "label": "English",
                    "value": "en",
                  },
                  {
                    "label": "French",
                    "value": "fra",
                  },
                  {
                    "label": "Chinook",
                    "value": "chn",
                  },
                  {
                    "label": "Zapotec",
                    "value": "zap",
                  },
                  {
                    "label": "Spanish",
                    "value": "spa",
                  },
                ],
              },
            },
          },
        },
      },
      "content": {
        "complexDataType": "NESTED_TYPE",
        "description": "(multilingual text) content for this page",
        "isArray": false,
        "isOptional": true,
        "label": "content",
        "schema": {
          "items": {
            "complexDataType": "NESTED_TYPE",
            "description": "one item for each provided language",
            "isArray": true,
            "isOptional": false,
            "label": "items",
            "schema": {
              "languageCode": {
                "complexDataType": "ENUM",
                "description": "an official identifier of the language",
                "enumLabel": "Language_Code",
                "enumName": "LangaugeCode",
                "isArray": false,
                "isOptional": false,
                "label": "language code",
                "labelsAndValues": [
                  {
                    "label": "Chilcotin",
                    "value": "clc",
                  },
                  {
                    "label": "Haida",
                    "value": "hai",
                  },
                  {
                    "label": "English",
                    "value": "en",
                  },
                  {
                    "label": "French",
                    "value": "fra",
                  },
                  {
                    "label": "Chinook",
                    "value": "chn",
                  },
                  {
                    "label": "Zapotec",
                    "value": "zap",
                  },
                  {
                    "label": "Spanish",
                    "value": "spa",
                  },
                ],
              },
              "role": {
                "complexDataType": "ENUM",
                "description": "role of this text in the translation process",
                "enumLabel": "text item role",
                "enumName": "Multilingual Text Item Role",
                "isArray": false,
                "isOptional": false,
                "label": "text item role",
                "labelsAndValues": [
                  {
                    "label": "original",
                    "value": "original",
                  },
                  {
                    "label": "glossed to",
                    "value": "glossed to",
                  },
                  {
                    "label": "free translation",
                    "value": "free translation",
                  },
                  {
                    "label": "literal translation",
                    "value": "literal translation",
                  },
                  {
                    "label": "elicited from a prompt",
                    "value": "elicited from a prompt",
                  },
                ],
              },
              "text": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "plain text in the given language",
                "isArray": false,
                "isOptional": false,
                "label": "text",
              },
            },
          },
        },
      },
      "identifier": {
        "coscradDataType": "PAGE_NUMBER",
        "description": "text identifier for the page",
        "isArray": false,
        "isOptional": false,
        "label": "identifier",
      },
      "photographId": {
        "coscradDataType": "UUID",
        "description": "a reference to the main photograph for this page",
        "isArray": false,
        "isOptional": true,
        "label": "photograph ID",
      },
    },
  },
  "title": {
    "complexDataType": "NESTED_TYPE",
    "description": "the title of the digital text",
    "isArray": false,
    "isOptional": false,
    "label": "title",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Media Item  should match the snapshot 1`] = `
{
  "dimensions": {
    "complexDataType": "NESTED_TYPE",
    "description": "the width and height of the media item",
    "isArray": false,
    "isOptional": true,
    "label": "dimensions",
    "schema": {
      "heightPx": {
        "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
        "description": "the height of the media item in pixels",
        "isArray": false,
        "isOptional": false,
        "label": "height (px)",
      },
      "widthPx": {
        "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
        "description": "the width of the media item in pixels",
        "isArray": false,
        "isOptional": false,
        "label": "width (px)",
      },
    },
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "lengthMilliseconds": {
    "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
    "description": "length of the media item in milliseconds",
    "isArray": false,
    "isOptional": true,
    "label": "length (ms)",
  },
  "mimeType": {
    "complexDataType": "ENUM",
    "description": "technical specification of the format of the media item",
    "enumLabel": "MIME type",
    "enumName": "MIMEType",
    "isArray": false,
    "isOptional": false,
    "label": "MIME type",
    "labelsAndValues": [
      {
        "label": "pdf",
        "value": "application/pdf",
      },
      {
        "label": "csv",
        "value": "text/csv",
      },
      {
        "label": "xlsx",
        "value": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
      },
      {
        "label": "docx",
        "value": "application/vnd.openxmlformats-officedocument.wordprocessingml.document",
      },
      {
        "label": "pptx",
        "value": "application/vnd.openxmlformats-officedocument.presentationml.presentation",
      },
      {
        "label": "png",
        "value": "image/png",
      },
      {
        "label": "bmp",
        "value": "image/bmp",
      },
      {
        "label": "jpg",
        "value": "image/jpeg",
      },
      {
        "label": "svg",
        "value": "image/svg+xml",
      },
      {
        "label": "mp3",
        "value": "audio/mpeg",
      },
      {
        "label": "wav",
        "value": "audio/wav",
      },
      {
        "label": "audioOgg",
        "value": "audio/ogg",
      },
      {
        "label": "mp4",
        "value": "video/mp4",
      },
      {
        "label": "videoOgg",
        "value": "video/ogg",
      },
      {
        "label": "videoWebm",
        "value": "video/webm",
      },
      {
        "label": "mov",
        "value": "mov",
      },
    ],
  },
  "title": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "title of the media item in the language",
    "isArray": false,
    "isOptional": true,
    "label": "title (language)",
  },
  "url": {
    "coscradDataType": "URL",
    "description": "a web link to the corresponding media file",
    "isArray": false,
    "isOptional": false,
    "label": "url",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Note  should match the snapshot 1`] = `
{
  "audioForNote": {
    "complexDataType": "NESTED_TYPE",
    "description": "contains references to audio for the note",
    "isArray": false,
    "isOptional": false,
    "label": "audio for note",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "a list of audio for each available",
        "isArray": true,
        "isOptional": false,
        "label": "audio items",
        "schema": {
          "audioItemId": {
            "coscradDataType": "UUID",
            "description": "a reference to the relevant audio item",
            "isArray": false,
            "isOptional": false,
            "label": "audio item ID",
            "referenceTo": "audioItem",
          },
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "language of the audio",
            "enumLabel": "language code",
            "enumName": "LanguageCode",
            "isArray": false,
            "isOptional": false,
            "label": "language",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
        },
      },
    },
  },
  "connectionType": {
    "complexDataType": "ENUM",
    "description": "either note or connection",
    "enumLabel": "Edge Connection Type",
    "enumName": "EdgeConnectionType",
    "isArray": false,
    "isOptional": false,
    "label": "type",
    "labelsAndValues": [
      {
        "label": "note",
        "value": "self",
      },
      {
        "label": "connection",
        "value": "dual",
      },
    ],
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "members": {
    "complexDataType": "NESTED_TYPE",
    "description": "the resource for the note or the resources involved in the connection",
    "isArray": true,
    "isOptional": false,
    "label": "members",
    "schema": {
      "compositeIdentifier": {
        "coscradDataType": "COMPOSITE_IDENTIFIER",
        "description": "composite identifier of the members's resource",
        "isArray": false,
        "isOptional": false,
        "label": "composite identifier",
      },
      "context": {
        "complexDataType": "UNION_TYPE",
        "description": "contextualizes the note or connection for this member",
        "discriminantPath": "type",
        "isArray": false,
        "isOptional": false,
        "label": "context",
        "schemaDefinitions": [
          {
            "discriminant": "general",
            "schema": {
              "type": {
                "coscradDataType": "FIXED_VALUE",
                "description": "must be: general",
                "isArray": false,
                "isOptional": false,
                "label": "context type",
              },
            },
          },
          {
            "discriminant": "pageRange",
            "schema": {
              "pageIdentifiers": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "a list of page identifiers relevant to this note or connection",
                "isArray": true,
                "isOptional": false,
                "label": "page identifiers",
              },
              "type": {
                "coscradDataType": "FIXED_VALUE",
                "description": "must be: pageRange",
                "isArray": false,
                "isOptional": false,
                "label": "context type",
              },
            },
          },
          {
            "discriminant": "timeRange",
            "schema": {
              "timeRange": {
                "complexDataType": "NESTED_TYPE",
                "description": "specifies the time range (in and out points) of a segment of a media item",
                "isArray": false,
                "isOptional": false,
                "label": "time range",
                "schema": {
                  "inPointMilliseconds": {
                    "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
                    "description": "starting time stamp in milliseconds",
                    "isArray": false,
                    "isOptional": false,
                    "label": "in point (ms)",
                  },
                  "outPointMilliseconds": {
                    "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
                    "description": "ending time stamp in milliseconds",
                    "isArray": false,
                    "isOptional": false,
                    "label": "out point (ms)",
                  },
                },
              },
              "type": {
                "coscradDataType": "FIXED_VALUE",
                "description": "type",
                "isArray": false,
                "isOptional": false,
                "label": "type",
              },
            },
          },
          {
            "discriminant": "textField",
            "schema": {
              "charRange": {
                "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
                "description": "specifies a range of characters in a text that are relevant to a note or connection",
                "isArray": true,
                "isOptional": false,
                "label": "character range",
              },
              "languageCode": {
                "complexDataType": "ENUM",
                "description": "the language of the target text",
                "enumLabel": "language code",
                "enumName": "LanguageCode",
                "isArray": false,
                "isOptional": false,
                "label": "language",
                "labelsAndValues": [
                  {
                    "label": "Chilcotin",
                    "value": "clc",
                  },
                  {
                    "label": "Haida",
                    "value": "hai",
                  },
                  {
                    "label": "English",
                    "value": "en",
                  },
                  {
                    "label": "French",
                    "value": "fra",
                  },
                  {
                    "label": "Chinook",
                    "value": "chn",
                  },
                  {
                    "label": "Zapotec",
                    "value": "zap",
                  },
                  {
                    "label": "Spanish",
                    "value": "spa",
                  },
                ],
              },
              "target": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "the text-valued property that provides the context for this note or connection",
                "isArray": false,
                "isOptional": false,
                "label": "target property",
              },
              "type": {
                "coscradDataType": "FIXED_VALUE",
                "description": "text field",
                "isArray": false,
                "isOptional": false,
                "label": "context type",
              },
            },
          },
        ],
        "unionName": "EDGE_CONNECTION_CONTEXT_UNION",
      },
      "role": {
        "complexDataType": "ENUM",
        "description": "is",
        "enumLabel": "Edge Connection Member Role",
        "enumName": "EDGE_CONNECTION_MEMBER_ROLE",
        "isArray": false,
        "isOptional": false,
        "label": "role",
        "labelsAndValues": [
          {
            "label": "from",
            "value": "from",
          },
          {
            "label": "to",
            "value": "to",
          },
          {
            "label": "self",
            "value": "self",
          },
        ],
      },
    },
  },
  "note": {
    "complexDataType": "NESTED_TYPE",
    "description": "text summary of why this connection is relevant",
    "isArray": false,
    "isOptional": false,
    "label": "note text",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Photograph  should match the snapshot 1`] = `
{
  "dimensions": {
    "complexDataType": "NESTED_TYPE",
    "description": "the height and width of the photograph in pixels",
    "isArray": false,
    "isOptional": false,
    "label": "dimensions",
    "schema": {
      "heightPx": {
        "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
        "description": "the height of the media item in pixels",
        "isArray": false,
        "isOptional": false,
        "label": "height (px)",
      },
      "widthPx": {
        "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
        "description": "the width of the media item in pixels",
        "isArray": false,
        "isOptional": false,
        "label": "width (px)",
      },
    },
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "mediaItemId": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "reference to the media item for this photograph",
    "isArray": false,
    "isOptional": false,
    "label": "media item ID",
    "referenceTo": "mediaItem",
  },
  "photographer": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "the person who took the picture",
    "isArray": false,
    "isOptional": false,
    "label": "photograph",
  },
  "title": {
    "complexDataType": "NESTED_TYPE",
    "description": "multilingual title for this photograph",
    "isArray": false,
    "isOptional": false,
    "label": "title",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Playlist  should match the snapshot 1`] = `
{
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "items": {
    "complexDataType": "NESTED_TYPE",
    "description": "the resources from which the playlist's episodes are derived",
    "isArray": true,
    "isOptional": true,
    "label": "playlist items",
    "schema": {
      "resourceCompositeIdentifier": {
        "complexDataType": "NESTED_TYPE",
        "description": "system-wide unique identifier for the resource this playlist item was derived from",
        "isArray": false,
        "isOptional": false,
        "label": "resource composite identifier",
        "schema": {
          "id": {
            "coscradDataType": "UUID",
            "description": "unique identifier",
            "isArray": false,
            "isOptional": false,
            "label": "id",
          },
          "type": {
            "complexDataType": "ENUM",
            "description": "the type of the resource this playlist item is derived from",
            "enumLabel": "type",
            "enumName": "type",
            "isArray": false,
            "isOptional": false,
            "label": "resource type",
            "labelsAndValues": [
              {
                "label": "audioItem",
                "value": "audioItem",
              },
            ],
          },
        },
      },
    },
  },
  "name": {
    "complexDataType": "NESTED_TYPE",
    "description": "the name of the playlist",
    "isArray": false,
    "isOptional": false,
    "label": "name",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Song  should match the snapshot 1`] = `
{
  "audioItemId": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "reference to the corresponding audio item",
    "isArray": false,
    "isOptional": false,
    "label": "media item ID",
    "referenceTo": "audioItem",
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "lyrics": {
    "complexDataType": "NESTED_TYPE",
    "description": "the lyrics of the song",
    "isArray": false,
    "isOptional": true,
    "label": "lyrics",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
  "title": {
    "complexDataType": "NESTED_TYPE",
    "description": "the title of the song",
    "isArray": false,
    "isOptional": false,
    "label": "title",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Spatial Feature of subtype: LineString should match the snapshot 1`] = `
{
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Spatial Feature of subtype: Point should match the snapshot 1`] = `
{
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Spatial Feature of subtype: Polygon should match the snapshot 1`] = `
{
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Tag  should match the snapshot 1`] = `
{
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "label": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "a human readable text label for this tag",
    "isArray": false,
    "isOptional": false,
    "label": "label",
  },
  "members": {
    "coscradDataType": "COMPOSITE_IDENTIFIER",
    "description": "the composite identifier of every resource or note with this tag",
    "isArray": true,
    "isOptional": false,
    "label": "members",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Term  should match the snapshot 1`] = `
{
  "audio": {
    "complexDataType": "NESTED_TYPE",
    "description": "collection of references to audio for content in available langauges",
    "isArray": false,
    "isOptional": false,
    "label": "multilingual audio",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "a list of audio for each available",
        "isArray": true,
        "isOptional": false,
        "label": "audio items",
        "schema": {
          "audioItemId": {
            "coscradDataType": "UUID",
            "description": "a reference to the relevant audio item",
            "isArray": false,
            "isOptional": false,
            "label": "audio item ID",
            "referenceTo": "audioItem",
          },
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "language of the audio",
            "enumLabel": "language code",
            "enumName": "LanguageCode",
            "isArray": false,
            "isOptional": false,
            "label": "language",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
        },
      },
    },
  },
  "contributorId": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "reference to the contributor for this term",
    "isArray": false,
    "isOptional": true,
    "label": "contributor ID",
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "isPromptTerm": {
    "coscradDataType": "BOOLEAN",
    "description": "flag for whether or not this is a prompt term",
    "isArray": false,
    "isOptional": true,
    "label": "is prompt term",
  },
  "sourceProject": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "the name of the project through which the term was collected",
    "isArray": false,
    "isOptional": true,
    "label": "Source Project",
  },
  "text": {
    "complexDataType": "NESTED_TYPE",
    "description": "the text for the term",
    "isArray": false,
    "isOptional": false,
    "label": "text",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Transcribed Audio Item  should match the snapshot 1`] = `
{
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "lengthMilliseconds": {
    "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
    "description": "the length of the transcript's media item in milliseconds",
    "isArray": false,
    "isOptional": false,
    "label": "length (ms)",
  },
  "mediaItemId": {
    "coscradDataType": "UUID",
    "description": "ID of the transcript's media item",
    "isArray": false,
    "isOptional": false,
    "label": "media item ID",
    "referenceTo": "mediaItem",
  },
  "name": {
    "complexDataType": "NESTED_TYPE",
    "description": "the name of the transcript",
    "isArray": false,
    "isOptional": false,
    "label": "name",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
  "transcript": {
    "complexDataType": "NESTED_TYPE",
    "description": "time stamps with text and speaker labels",
    "isArray": false,
    "isOptional": true,
    "label": "items",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "time stamps with text and speaker labels",
        "isArray": true,
        "isOptional": true,
        "label": "items",
        "schema": {
          "inPointMilliseconds": {
            "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
            "description": "starting time stamp (ms)",
            "isArray": false,
            "isOptional": false,
            "label": "in point",
          },
          "outPointMilliseconds": {
            "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
            "description": "ending time stamp (ms)",
            "isArray": false,
            "isOptional": false,
            "label": "out point",
          },
          "speakerInitials": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the label for the current timestamped item",
            "isArray": false,
            "isOptional": false,
            "label": "label",
          },
          "text": {
            "complexDataType": "NESTED_TYPE",
            "description": "multi-lingual text transcription \\ translation for this item",
            "isArray": false,
            "isOptional": false,
            "label": "text",
            "schema": {
              "items": {
                "complexDataType": "NESTED_TYPE",
                "description": "one item for each provided language",
                "isArray": true,
                "isOptional": false,
                "label": "items",
                "schema": {
                  "languageCode": {
                    "complexDataType": "ENUM",
                    "description": "an official identifier of the language",
                    "enumLabel": "Language_Code",
                    "enumName": "LangaugeCode",
                    "isArray": false,
                    "isOptional": false,
                    "label": "language code",
                    "labelsAndValues": [
                      {
                        "label": "Chilcotin",
                        "value": "clc",
                      },
                      {
                        "label": "Haida",
                        "value": "hai",
                      },
                      {
                        "label": "English",
                        "value": "en",
                      },
                      {
                        "label": "French",
                        "value": "fra",
                      },
                      {
                        "label": "Chinook",
                        "value": "chn",
                      },
                      {
                        "label": "Zapotec",
                        "value": "zap",
                      },
                      {
                        "label": "Spanish",
                        "value": "spa",
                      },
                    ],
                  },
                  "role": {
                    "complexDataType": "ENUM",
                    "description": "role of this text in the translation process",
                    "enumLabel": "text item role",
                    "enumName": "Multilingual Text Item Role",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text item role",
                    "labelsAndValues": [
                      {
                        "label": "original",
                        "value": "original",
                      },
                      {
                        "label": "glossed to",
                        "value": "glossed to",
                      },
                      {
                        "label": "free translation",
                        "value": "free translation",
                      },
                      {
                        "label": "literal translation",
                        "value": "literal translation",
                      },
                      {
                        "label": "elicited from a prompt",
                        "value": "elicited from a prompt",
                      },
                    ],
                  },
                  "text": {
                    "coscradDataType": "NON_EMPTY_STRING",
                    "description": "plain text in the given language",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text",
                  },
                },
              },
            },
          },
        },
      },
      "participants": {
        "complexDataType": "NESTED_TYPE",
        "description": "a list of participants and their initials",
        "isArray": true,
        "isOptional": true,
        "label": "participants",
        "schema": {
          "initials": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the initials or text identifier for this speaker",
            "isArray": false,
            "isOptional": false,
            "label": "speaker initials",
          },
          "name": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the participant's name",
            "isArray": false,
            "isOptional": false,
            "label": "name",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a User  should match the snapshot 1`] = `
{
  "authProviderUserId": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "an external ID that identifies the user with the auth provider",
    "isArray": false,
    "isOptional": false,
    "label": "user ID with the auth provider",
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "profile": {
    "complexDataType": "NESTED_TYPE",
    "description": "the user's profile information",
    "isArray": false,
    "isOptional": true,
    "label": "profile",
    "schema": {
      "email": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the user's email address",
        "isArray": false,
        "isOptional": false,
        "label": "email",
      },
      "name": {
        "complexDataType": "NESTED_TYPE",
        "description": "the user's full name",
        "isArray": false,
        "isOptional": false,
        "label": "full name",
        "schema": {
          "firstName": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the user's first name",
            "isArray": false,
            "isOptional": false,
            "label": "first name",
          },
          "lastName": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the user's last name",
            "isArray": false,
            "isOptional": false,
            "label": "last name",
          },
        },
      },
    },
  },
  "roles": {
    "complexDataType": "ENUM",
    "description": "the user's roles, which grant privileges to perform certain read \\ write actions",
    "enumLabel": "User Role",
    "enumName": "COSCRAD_USER_ROLE",
    "isArray": true,
    "isOptional": false,
    "label": "roles",
    "labelsAndValues": [
      {
        "label": "admin",
        "value": "projectAdmin",
      },
      {
        "label": "viewer",
        "value": "viewer",
      },
      {
        "label": "COSCRAD admin",
        "value": "superAdmin",
      },
    ],
  },
  "username": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "a human-readable identifier for this user",
    "isArray": false,
    "isOptional": false,
    "label": "username",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a User Group  should match the snapshot 1`] = `
{
  "description": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "a summary of the significance of this user group (what its members have in common)",
    "isArray": false,
    "isOptional": false,
    "label": "description",
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "label": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "the name of the group",
    "isArray": false,
    "isOptional": false,
    "label": "label",
  },
  "userIds": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "the ID of every user that is in this group",
    "isArray": true,
    "isOptional": false,
    "label": "user IDs",
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Video  should match the snapshot 1`] = `
{
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "lengthMilliseconds": {
    "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
    "description": "the length of the transcript's media item in milliseconds",
    "isArray": false,
    "isOptional": false,
    "label": "length (ms)",
  },
  "mediaItemId": {
    "coscradDataType": "UUID",
    "description": "ID of the transcript's media item",
    "isArray": false,
    "isOptional": false,
    "label": "media item ID",
    "referenceTo": "mediaItem",
  },
  "name": {
    "complexDataType": "NESTED_TYPE",
    "description": "the name of the video",
    "isArray": false,
    "isOptional": false,
    "label": "name",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
  "transcript": {
    "complexDataType": "NESTED_TYPE",
    "description": "time stamps with text and speaker labels",
    "isArray": false,
    "isOptional": true,
    "label": "items",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "time stamps with text and speaker labels",
        "isArray": true,
        "isOptional": true,
        "label": "items",
        "schema": {
          "inPointMilliseconds": {
            "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
            "description": "starting time stamp (ms)",
            "isArray": false,
            "isOptional": false,
            "label": "in point",
          },
          "outPointMilliseconds": {
            "coscradDataType": "NON_NEGATIVE_FINITE_NUMBER",
            "description": "ending time stamp (ms)",
            "isArray": false,
            "isOptional": false,
            "label": "out point",
          },
          "speakerInitials": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the label for the current timestamped item",
            "isArray": false,
            "isOptional": false,
            "label": "label",
          },
          "text": {
            "complexDataType": "NESTED_TYPE",
            "description": "multi-lingual text transcription \\ translation for this item",
            "isArray": false,
            "isOptional": false,
            "label": "text",
            "schema": {
              "items": {
                "complexDataType": "NESTED_TYPE",
                "description": "one item for each provided language",
                "isArray": true,
                "isOptional": false,
                "label": "items",
                "schema": {
                  "languageCode": {
                    "complexDataType": "ENUM",
                    "description": "an official identifier of the language",
                    "enumLabel": "Language_Code",
                    "enumName": "LangaugeCode",
                    "isArray": false,
                    "isOptional": false,
                    "label": "language code",
                    "labelsAndValues": [
                      {
                        "label": "Chilcotin",
                        "value": "clc",
                      },
                      {
                        "label": "Haida",
                        "value": "hai",
                      },
                      {
                        "label": "English",
                        "value": "en",
                      },
                      {
                        "label": "French",
                        "value": "fra",
                      },
                      {
                        "label": "Chinook",
                        "value": "chn",
                      },
                      {
                        "label": "Zapotec",
                        "value": "zap",
                      },
                      {
                        "label": "Spanish",
                        "value": "spa",
                      },
                    ],
                  },
                  "role": {
                    "complexDataType": "ENUM",
                    "description": "role of this text in the translation process",
                    "enumLabel": "text item role",
                    "enumName": "Multilingual Text Item Role",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text item role",
                    "labelsAndValues": [
                      {
                        "label": "original",
                        "value": "original",
                      },
                      {
                        "label": "glossed to",
                        "value": "glossed to",
                      },
                      {
                        "label": "free translation",
                        "value": "free translation",
                      },
                      {
                        "label": "literal translation",
                        "value": "literal translation",
                      },
                      {
                        "label": "elicited from a prompt",
                        "value": "elicited from a prompt",
                      },
                    ],
                  },
                  "text": {
                    "coscradDataType": "NON_EMPTY_STRING",
                    "description": "plain text in the given language",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text",
                  },
                },
              },
            },
          },
        },
      },
      "participants": {
        "complexDataType": "NESTED_TYPE",
        "description": "a list of participants and their initials",
        "isArray": true,
        "isOptional": true,
        "label": "participants",
        "schema": {
          "initials": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the initials or text identifier for this speaker",
            "isArray": false,
            "isOptional": false,
            "label": "speaker initials",
          },
          "name": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the participant's name",
            "isArray": false,
            "isOptional": false,
            "label": "name",
          },
        },
      },
    },
  },
}
`;

exports[`Coscrad Data Schemas for aggregate root domain models the COSCRAD data schema for a Vocabulary List  should match the snapshot 1`] = `
{
  "entries": {
    "complexDataType": "NESTED_TYPE",
    "description": "all terms in this vocabulary list with corresponding filter properties",
    "isArray": true,
    "isOptional": true,
    "label": "entries",
    "schema": {
      "termId": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "unique identifier for the term that is included in the vocabulary list via this entry",
        "isArray": false,
        "isOptional": false,
        "label": "term ID",
      },
    },
  },
  "id": {
    "coscradDataType": "NON_EMPTY_STRING",
    "description": "unique identifier",
    "isArray": false,
    "isOptional": false,
    "label": "ID",
  },
  "name": {
    "complexDataType": "NESTED_TYPE",
    "description": "the name of the vocabulary list",
    "isArray": false,
    "isOptional": false,
    "label": "name",
    "schema": {
      "items": {
        "complexDataType": "NESTED_TYPE",
        "description": "one item for each provided language",
        "isArray": true,
        "isOptional": false,
        "label": "items",
        "schema": {
          "languageCode": {
            "complexDataType": "ENUM",
            "description": "an official identifier of the language",
            "enumLabel": "Language_Code",
            "enumName": "LangaugeCode",
            "isArray": false,
            "isOptional": false,
            "label": "language code",
            "labelsAndValues": [
              {
                "label": "Chilcotin",
                "value": "clc",
              },
              {
                "label": "Haida",
                "value": "hai",
              },
              {
                "label": "English",
                "value": "en",
              },
              {
                "label": "French",
                "value": "fra",
              },
              {
                "label": "Chinook",
                "value": "chn",
              },
              {
                "label": "Zapotec",
                "value": "zap",
              },
              {
                "label": "Spanish",
                "value": "spa",
              },
            ],
          },
          "role": {
            "complexDataType": "ENUM",
            "description": "role of this text in the translation process",
            "enumLabel": "text item role",
            "enumName": "Multilingual Text Item Role",
            "isArray": false,
            "isOptional": false,
            "label": "text item role",
            "labelsAndValues": [
              {
                "label": "original",
                "value": "original",
              },
              {
                "label": "glossed to",
                "value": "glossed to",
              },
              {
                "label": "free translation",
                "value": "free translation",
              },
              {
                "label": "literal translation",
                "value": "literal translation",
              },
              {
                "label": "elicited from a prompt",
                "value": "elicited from a prompt",
              },
            ],
          },
          "text": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "plain text in the given language",
            "isArray": false,
            "isOptional": false,
            "label": "text",
          },
        },
      },
    },
  },
  "variables": {
    "complexDataType": "NESTED_TYPE",
    "description": "defines a dynamic form that can be used to filter the entries",
    "isArray": true,
    "isOptional": true,
    "label": "filters",
    "schema": {
      "name": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the name of this filter property",
        "isArray": false,
        "isOptional": false,
        "label": "filter property name",
      },
    },
  },
}
`;
